# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /api/v1
+basePath: /api
 definitions:
   api.APIConsensusClientNodeInfo:
     properties:
@@ -217,7 +217,7 @@ info:
   title: Dora Explorer API
   version: "1.0"
 paths:
-  /clients/consensus:
+  /v1/clients/consensus:
     get:
       consumes:
       - application/json
@@ -246,7 +246,7 @@ paths:
       summary: Get consensus clients information
       tags:
       - clients
-  /clients/execution:
+  /v1/clients/execution:
     get:
       consumes:
       - application/json
@@ -275,7 +275,7 @@ paths:
       summary: Get execution clients information
       tags:
       - clients
-  /epoch/{epoch}:
+  /v1/epoch/{epoch}:
     get:
       description: Returns information for a specified epoch by the epoch number or
         an epoch tag (can be latest or finalized)
@@ -308,7 +308,7 @@ paths:
       summary: Get epoch by number, latest, finalized
       tags:
       - Epoch
-  /validator:
+  /v1/validator:
     post:
       description: This POST endpoint exists because the GET endpoint can lead to
         a "URI too long" error when searching for too many validators based on their
@@ -341,7 +341,7 @@ paths:
       summary: Get up to 100 validators
       tags:
       - Validator
-  /validator/{indexOrPubkey}:
+  /v1/validator/{indexOrPubkey}:
     get:
       description: Searching for too many validators based on their pubkeys will lead
         to a "URI too long" error
@@ -372,7 +372,7 @@ paths:
       summary: Get up to 100 validators
       tags:
       - Validator
-  /validator/{indexOrPubkey}/deposits:
+  /v1/validator/{indexOrPubkey}/deposits:
     get:
       description: Get all eth1 deposits for up to 100 validators
       parameters:
@@ -402,7 +402,7 @@ paths:
       summary: Get validator execution layer deposits
       tags:
       - Validators
-  /validator/eth1/{eth1address}:
+  /v1/validator/eth1/{eth1address}:
     get:
       parameters:
       - description: Eth1 address from which the validator deposits were sent
@@ -439,7 +439,7 @@ paths:
       summary: Get all validators that belong to an eth1 address
       tags:
       - Validator
-  /validator/withdrawalCredentials/{withdrawalCredentialsOrEth1address}:
+  /v1/validator/withdrawalCredentials/{withdrawalCredentialsOrEth1address}:
     get:
       parameters:
       - description: Provide a withdrawal credential or an eth1 address with an optional
