# handlers/api/api_clients_cl.go
@@ -46,7 +46,7 @@ type APIConsensusClientsResponse struct {
 // @Success 200 {object} APIConsensusClientsResponse
 // @Failure 429 {object} map[string]string "Rate limit exceeded"
 // @Failure 500 {object} map[string]string "Internal server error"
-// @Router /clients/consensus [get]
+// @Router /v1/clients/consensus [get]
 func APIConsensusClients(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
