# handlers/api/validator_withdrawalcredentials_v1.go
@@ -27,7 +27,7 @@ type ApiWithdrawalCredentialsResponseV1 struct {
 // @Param offset query int false "Offset the number of results" default(0)
 // @Success 200 {object} ApiResponse{data=[]ApiWithdrawalCredentialsResponseV1}
 // @Failure 400 {object} ApiResponse
-// @Router /validator/withdrawalCredentials/{withdrawalCredentialsOrEth1address} [get]
+// @Router /v1/validator/withdrawalCredentials/{withdrawalCredentialsOrEth1address} [get]
 func ApiWithdrawalCredentialsValidatorsV1(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	q := r.URL.Query()
